TPs/assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 117 conflicts: 9 shift/reduce
State 142 conflicts: 9 shift/reduce
State 153 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID '{' error '}' ';'
    7      | CLASS error '{' features_list '}' ';'
    8      | CLASS error '{' error '}' ';'

    9 features_list: features
   10              | %empty

   11 features: feature ';'
   12         | features feature ';'
   13         | error ';'

   14 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID ':' TYPEID
   16        | OBJECTID ':' TYPEID ASSIGN expr

   17 formals: formal
   18        | formals ',' formal
   19        | %empty

   20 formal: OBJECTID ':' TYPEID

   21 case_branch_list: case_branch
   22                 | case_branch_list case_branch

   23 case_branch: OBJECTID ':' TYPEID DARROW expr ';'

   24 one_or_more_expr: expr ';'
   25                 | one_or_more_expr expr ';'
   26                 | error ';'

   27 param_expr: expr
   28           | param_expr ',' expr
   29           | %empty

   30 expr: OBJECTID ASSIGN expr
   31     | expr '.' OBJECTID '(' param_expr ')'
   32     | expr '@' TYPEID '.' OBJECTID '(' param_expr ')'
   33     | OBJECTID '(' param_expr ')'
   34     | IF expr THEN expr ELSE expr FI
   35     | WHILE expr LOOP expr POOL
   36     | '{' one_or_more_expr '}'
   37     | LET let_expr
   38     | CASE expr OF case_branch_list ESAC
   39     | NEW TYPEID
   40     | ISVOID expr
   41     | expr '+' expr
   42     | expr '-' expr
   43     | expr '*' expr
   44     | expr '/' expr
   45     | '~' expr
   46     | expr '<' expr
   47     | expr LE expr
   48     | expr '=' expr
   49     | NOT expr
   50     | '(' expr ')'
   51     | OBJECTID
   52     | INT_CONST
   53     | STR_CONST
   54     | BOOL_CONST

   55 let_expr: OBJECTID ':' TYPEID IN expr
   56         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   57         | OBJECTID ':' TYPEID ',' let_expr
   58         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   59         | error IN expr
   60         | error ',' let_expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 31 32 33 50
')' (41) 14 31 32 33 50
'*' (42) 43
'+' (43) 41
',' (44) 18 28 57 58 60
'-' (45) 42
'.' (46) 31 32
'/' (47) 44
':' (58) 14 15 16 20 23 55 56 57 58
';' (59) 4 5 6 7 8 11 12 13 23 24 25 26
'<' (60) 46
'=' (61) 48
'@' (64) 32
'{' (123) 4 5 6 7 8 14 36
'}' (125) 4 5 6 7 8 14 36
'~' (126) 45
error (256) 6 7 8 13 26 59 60
CLASS (258) 4 5 6 7 8
ELSE (259) 34
FI (260) 34
IF (261) 34
IN (262) 55 56 59
INHERITS (263) 5
LET (264) 37
LOOP (265) 35
POOL (266) 35
THEN (267) 34
WHILE (268) 35
CASE (269) 38
ESAC (270) 38
OF (271) 38
DARROW (272) 23
NEW (273) 39
ISVOID (274) 40
STR_CONST (275) 53
INT_CONST (276) 52
BOOL_CONST (277) 54
TYPEID (278) 4 5 6 14 15 16 20 23 32 39 55 56 57 58
OBJECTID (279) 14 15 16 20 23 30 31 32 33 51 55 56 57 58
ASSIGN (280) 16 30 56 58
NOT (281) 49
LE (282) 47
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7 8, on right: 2 3
features_list (49)
    on left: 9 10, on right: 4 5 7
features (50)
    on left: 11 12 13, on right: 9 12
feature (51)
    on left: 14 15 16, on right: 11 12
formals (52)
    on left: 17 18 19, on right: 14 18
formal (53)
    on left: 20, on right: 17 18
case_branch_list (54)
    on left: 21 22, on right: 22 38
case_branch (55)
    on left: 23, on right: 21 22
one_or_more_expr (56)
    on left: 24 25 26, on right: 25 36
param_expr (57)
    on left: 27 28 29, on right: 28 31 32 33
expr (58)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54, on right: 14 16 23 24 25 27 28 30 31 32 34
    35 38 40 41 42 43 44 45 46 47 48 49 50 55 56 58 59
let_expr (59)
    on left: 55 56 57 58 59 60, on right: 37 57 58 60


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' features_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS . TYPEID '{' error '}' ';'
    7      | CLASS . error '{' features_list '}' ';'
    8      | CLASS . error '{' error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    7 class: CLASS error . '{' features_list '}' ';'
    8      | CLASS error . '{' error '}' ';'

    '{'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' features_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID . '{' error '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    7 class: CLASS error '{' . features_list '}' ';'
    8      | CLASS error '{' . error '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 14
    features       go to state 15
    feature        go to state 16


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' features_list '}' ';'

    TYPEID  shift, and go to state 17


State 11

    4 class: CLASS TYPEID '{' . features_list '}' ';'
    6      | CLASS TYPEID '{' . error '}' ';'

    error     shift, and go to state 18
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 19
    features       go to state 15
    feature        go to state 16


State 12

    8 class: CLASS error '{' error . '}' ';'
   13 features: error . ';'

    '}'  shift, and go to state 20
    ';'  shift, and go to state 21


State 13

   14 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID . ':' TYPEID
   16        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 14

    7 class: CLASS error '{' features_list . '}' ';'

    '}'  shift, and go to state 24


State 15

    9 features_list: features .
   12 features: features . feature ';'

    OBJECTID  shift, and go to state 13

    $default  reduce using rule 9 (features_list)

    feature  go to state 25


State 16

   11 features: feature . ';'

    ';'  shift, and go to state 26


State 17

    5 class: CLASS TYPEID INHERITS TYPEID . '{' features_list '}' ';'

    '{'  shift, and go to state 27


State 18

    6 class: CLASS TYPEID '{' error . '}' ';'
   13 features: error . ';'

    '}'  shift, and go to state 28
    ';'  shift, and go to state 21


State 19

    4 class: CLASS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 29


State 20

    8 class: CLASS error '{' error '}' . ';'

    ';'  shift, and go to state 30


State 21

   13 features: error ';' .

    $default  reduce using rule 13 (features)


State 22

   14 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 31

    $default  reduce using rule 19 (formals)

    formals  go to state 32
    formal   go to state 33


State 23

   15 feature: OBJECTID ':' . TYPEID
   16        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 34


State 24

    7 class: CLASS error '{' features_list '}' . ';'

    ';'  shift, and go to state 35


State 25

   12 features: features feature . ';'

    ';'  shift, and go to state 36


State 26

   11 features: feature ';' .

    $default  reduce using rule 11 (features)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' . features_list '}' ';'

    error     shift, and go to state 37
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 38
    features       go to state 15
    feature        go to state 16


State 28

    6 class: CLASS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 39


State 29

    4 class: CLASS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 40


State 30

    8 class: CLASS error '{' error '}' ';' .

    $default  reduce using rule 8 (class)


State 31

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 41


State 32

   14 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'
   18 formals: formals . ',' formal

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


State 33

   17 formals: formal .

    $default  reduce using rule 17 (formals)


State 34

   15 feature: OBJECTID ':' TYPEID .
   16        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 44

    $default  reduce using rule 15 (feature)


State 35

    7 class: CLASS error '{' features_list '}' ';' .

    $default  reduce using rule 7 (class)


State 36

   12 features: features feature ';' .

    $default  reduce using rule 12 (features)


State 37

   13 features: error . ';'

    ';'  shift, and go to state 21


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 45


State 39

    6 class: CLASS TYPEID '{' error '}' ';' .

    $default  reduce using rule 6 (class)


State 40

    4 class: CLASS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 4 (class)


State 41

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 46


State 42

   14 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 47


State 43

   18 formals: formals ',' . formal

    OBJECTID  shift, and go to state 31

    formal  go to state 48


State 44

   16 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 63


State 45

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 64


State 46

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


State 47

   14 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 65


State 48

   18 formals: formals ',' formal .

    $default  reduce using rule 18 (formals)


State 49

   34 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 66


State 50

   37 expr: LET . let_expr

    error     shift, and go to state 67
    OBJECTID  shift, and go to state 68

    let_expr  go to state 69


State 51

   35 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 70


State 52

   38 expr: CASE . expr OF case_branch_list ESAC

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 71


State 53

   39 expr: NEW . TYPEID

    TYPEID  shift, and go to state 72


State 54

   40 expr: ISVOID . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 73


State 55

   53 expr: STR_CONST .

    $default  reduce using rule 53 (expr)


State 56

   52 expr: INT_CONST .

    $default  reduce using rule 52 (expr)


State 57

   54 expr: BOOL_CONST .

    $default  reduce using rule 54 (expr)


State 58

   30 expr: OBJECTID . ASSIGN expr
   33     | OBJECTID . '(' param_expr ')'
   51     | OBJECTID .

    ASSIGN  shift, and go to state 74
    '('     shift, and go to state 75

    $default  reduce using rule 51 (expr)


State 59

   49 expr: NOT . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 76


State 60

   45 expr: '~' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 77


State 61

   36 expr: '{' . one_or_more_expr '}'

    error       shift, and go to state 78
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    one_or_more_expr  go to state 79
    expr              go to state 80


State 62

   50 expr: '(' . expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 81


State 63

   16 feature: OBJECTID ':' TYPEID ASSIGN expr .
   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 16 (feature)


State 64

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 5 (class)


State 65

   14 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 91


State 66

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   34     | IF expr . THEN expr ELSE expr FI
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    THEN  shift, and go to state 92
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 67

   59 let_expr: error . IN expr
   60         | error . ',' let_expr

    IN   shift, and go to state 93
    ','  shift, and go to state 94


State 68

   55 let_expr: OBJECTID . ':' TYPEID IN expr
   56         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   57         | OBJECTID . ':' TYPEID ',' let_expr
   58         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 95


State 69

   37 expr: LET let_expr .

    $default  reduce using rule 37 (expr)


State 70

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   35     | WHILE expr . LOOP expr POOL
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    LOOP  shift, and go to state 96
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 71

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   38     | CASE expr . OF case_branch_list ESAC
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    OF   shift, and go to state 97
    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90


State 72

   39 expr: NEW TYPEID .

    $default  reduce using rule 39 (expr)


State 73

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   40     | ISVOID expr .
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 40 (expr)


State 74

   30 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 98


State 75

   33 expr: OBJECTID '(' . param_expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    $default  reduce using rule 29 (param_expr)

    param_expr  go to state 99
    expr        go to state 100


State 76

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr
   49     | NOT expr .

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 49 (expr)


State 77

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   45     | '~' expr .
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 45 (expr)


State 78

   26 one_or_more_expr: error . ';'

    ';'  shift, and go to state 101


State 79

   25 one_or_more_expr: one_or_more_expr . expr ';'
   36 expr: '{' one_or_more_expr . '}'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '}'         shift, and go to state 102
    '('         shift, and go to state 62

    expr  go to state 103


State 80

   24 one_or_more_expr: expr . ';'
   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90
    ';'  shift, and go to state 104


State 81

   31 expr: expr . '.' OBJECTID '(' param_expr ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . '=' expr
   50     | '(' expr . ')'

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90
    ')'  shift, and go to state 105


State 82

   47 expr: expr LE . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 106


State 83

   46 expr: expr '<' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 107


State 84

   48 expr: expr '=' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 108


State 85

   41 expr: expr '+' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 109


State 86

   42 expr: expr '-' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 110


State 87

   43 expr: expr '*' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 111


State 88

   44 expr: expr '/' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 112


State 89

   32 expr: expr '@' . TYPEID '.' OBJECTID '(' param_expr ')'

    TYPEID  shift, and go to state 113


State 90

   31 expr: expr '.' . OBJECTID '(' param_expr ')'

    OBJECTID  shift, and go to state 114


State 91

   14 feature: OBJECTID '(' formals ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 115


State 92

   34 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 116


State 93

   59 let_expr: error IN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 117


State 94

   60 let_expr: error ',' . let_expr
